fix: 修复 session 管理异常问题